--- a/.babelrc
+++ b/.babelrc
@@ -2,7 +2,8 @@
   "presets": [
     "react",
     "babel-preset-es2015",
-    "babel-preset-stage-0"
+    "babel-preset-stage-0",
+    "flow"
   ],
   "plugins": [
     "transform-decorators-legacy",
