--- a/.eslintrc
+++ b/.eslintrc
@@ -1,10 +1,11 @@
 {
     "parser": "babel-eslint",
-    "extends": "airbnb",
+    "extends": ["airbnb", "plugin:flowtype/recommended"]
     "plugins": [
         "react",
         "jsx-a11y",
-        "import"
+        "import",
+        "flowtype",
     ],
     "rules": {
       "semi": ["error", "never"],
