--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
     "marked": "^0.3.6",
     "mongodb": "^2.2.24",
     "mongoose": "^4.8.5",
-    "nodemon": "^1.11.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
-    "react-redux": "^5.0.3"
+    "react-redux": "^5.0.3",
+    "react-router": "^3.0.2"
   },
   "devDependencies": {
     "eslint": "^3.17.0",
@@ -21,6 +21,7 @@
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^4.0.0",
     "eslint-plugin-react": "^6.10.0",
+    "nodemon": "^1.11.0",
     "react-scripts": "0.9.3"
   },
   "scripts": {
