--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,6 @@
 {
     "parser": "babel-eslint",
-    "extends": ["airbnb", "plugin:flowtype/recommended"]
+    "extends": ["airbnb", "plugin:flowtype/recommended"],
     "plugins": [
         "react",
         "jsx-a11y",
@@ -11,5 +11,6 @@
       "semi": ["error", "never"],
       "class-method-use-this": 0,
       "react/jsx-filename-extension": 0,
+      "react/require-default-props": 0,
     },
 }
