--- a/package.json
+++ b/package.json
@@ -8,12 +8,16 @@
     "express": "^4.15.0",
     "foreman": "^2.0.0",
     "marked": "^0.3.6",
+    "material-ui": "^0.17.0",
     "mongodb": "^2.2.24",
     "mongoose": "^4.8.5",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.3",
-    "react-router": "^3.0.2"
+    "react-router": "^3.0.2",
+    "react-router-redux": "^4.0.8",
+    "react-tap-event-plugin": "^2.0.1",
+    "redux": "^3.6.0"
   },
   "devDependencies": {
     "eslint": "^3.17.0",
